step1.tf
provider "aws" {
  region = "us-east-1"
}

############
### VPCA ###
############

resource "aws_vpc" "VPC-A" {
  cidr_block           = "10.10.0.0/16"
  enable_dns_hostnames = true
  
  tags   = {
    Name = "VPC-A"
  }
}

resource "aws_subnet" "subnet-pb_VPC-A-1a" {
    vpc_id     = aws_vpc.VPC-A.id
    cidr_block = "10.10.1.0/24"
    availability_zone = "us-east-1a"
  tags   = {
    Name = "subnet-pb_VPC-A-1a"
  }
}

resource "aws_subnet" "subnet-pv_VPC-A-1a" {
    vpc_id     = aws_vpc.VPC-A.id
    cidr_block = "10.10.2.0/24"
    availability_zone = "us-east-1a"
  tags   = {
    Name = "subnet-pv_VPC-A-1a"
  }
}

resource "aws_subnet" "subnet-db_VPC-A-1a" {
    vpc_id     = aws_vpc.VPC-A.id
    cidr_block = "10.10.3.0/24"
    availability_zone = "us-east-1a"

  tags   = {
    Name = "subnet-db_VPC-A-1a"
  }
}

resource "aws_subnet" "subnet-pb_VPC-A-1b" {
    vpc_id     = aws_vpc.VPC-A.id
    cidr_block = "10.10.4.0/24"
    availability_zone = "us-east-1b"
  tags   = {
    Name = "subnet-pb_VPC-A-1b"
  }
}

resource "aws_subnet" "subnet-pv_VPC-A-1b" {
    vpc_id     = aws_vpc.VPC-A.id
    cidr_block = "10.10.5.0/24"
    availability_zone = "us-east-1b"
  tags   = {
    Name = "subnet-pv_VPC-A-1b"
  }
}

resource "aws_subnet" "subnet-db_VPC-A-1b" {
    vpc_id     = aws_vpc.VPC-A.id
    cidr_block = "10.10.6.0/24"
    availability_zone = "us-east-1b"
  tags   = {
    Name = "subnet-db_VPC-A-1b"
  }
}

resource "aws_subnet" "subnet-pb_VPC-A-1c" {
    vpc_id     = aws_vpc.VPC-A.id
    cidr_block = "10.10.7.0/24"
    availability_zone = "us-east-1c"
  
  tags   = {
    Name = "subnet-pb_VPC-A-1c"
  }
}

resource "aws_subnet" "subnet-pv_VPC-A-1c" {
    vpc_id     = aws_vpc.VPC-A.id
    cidr_block = "10.10.8.0/24"
    availability_zone = "us-east-1c"
  
  tags   = {
    Name = "subnet-pv_VPC-A-1c"
  }
}

resource "aws_subnet" "subnet-db_VPC-A-1c" {
    vpc_id     = aws_vpc.VPC-A.id
    cidr_block = "10.10.9.0/24"
    availability_zone = "us-east-1c"
  
  tags   = {
    Name = "subnet-db_VPC-A-1c"
  }
}

############
### VPCB ###
############

resource "aws_vpc" "VPC-B" {
  cidr_block           = "10.20.0.0/16"
  enable_dns_hostnames = true

  tags   = {
    Name = "VPC-B"
  }
}

resource "aws_subnet" "subnet-pb_VPC-B-1a" {
    vpc_id     = aws_vpc.VPC-B.id
    cidr_block = "10.20.1.0/24"
    availability_zone = "us-east-1a"
   tags   = {
    Name = "subnet-pb_VPC-B-1a"
  }
}

resource "aws_subnet" "subnet-pv_VPC-B-1a" {
    vpc_id     = aws_vpc.VPC-B.id
    cidr_block = "10.20.2.0/24"
    availability_zone = "us-east-1a"
   tags   = {
    Name = "subnet-pv_VPC-B-1a"
  }
}

resource "aws_subnet" "subnet-db_VPC-B-1a" {
    vpc_id     = aws_vpc.VPC-B.id
    cidr_block = "10.20.3.0/24"
    availability_zone = "us-east-1a"
   tags   = {
    Name = "subnet-db_VPC-B-1a"
  }
}

resource "aws_subnet" "subnet-pb_VPC-B-1b" {
    vpc_id     = aws_vpc.VPC-B.id
    cidr_block = "10.20.4.0/24"
    availability_zone = "us-east-1b"
   tags   = {
    Name = "subnet-pb_VPC-B-1b"
  }
}

resource "aws_subnet" "subnet-pv_VPC-B-1b" {
    vpc_id     = aws_vpc.VPC-B.id
    cidr_block = "10.20.5.0/24"
    availability_zone = "us-east-1b"
   tags   = {
    Name = "subnet-pv_VPC-B-1b"
  }
}

resource "aws_subnet" "subnet-db_VPC-B-1b" {
    vpc_id     = aws_vpc.VPC-B.id
    cidr_block = "10.20.6.0/24"
    availability_zone = "us-east-1b"
   tags   = {
    Name = "subnet-db_VPC-B-1b"
  }
}

resource "aws_subnet" "subnet-pb_VPC-B-1c" {
    vpc_id     = aws_vpc.VPC-B.id
    cidr_block = "10.20.7.0/24"
    availability_zone = "us-east-1c"
   tags   = {
    Name = "subnet-pb_VPC-B-1c"
  }
}

resource "aws_subnet" "subnet-pv_VPC-B-1c" {
    vpc_id     = aws_vpc.VPC-B.id
    cidr_block = "10.20.8.0/24"
    availability_zone = "us-east-1c"
   tags   = {
    Name = "subnet-pv_VPC-B-1c"
  }
}

resource "aws_subnet" "subnet-db_VPC-B-1c" {
    vpc_id     = aws_vpc.VPC-B.id
    cidr_block = "10.20.9.0/24"
    availability_zone = "us-east-1c"
   tags   = {
    Name = "subnet-db_VPC-B-1c"
  }
}

############
### VPCC ###
############

resource "aws_vpc" "VPC-C" {
  cidr_block           = "10.30.0.0/16"
  enable_dns_hostnames = true

  tags   = {
    Name = "VPC-C"
  }
}

resource "aws_subnet" "subnet-pb_VPC-C-1a" {
    vpc_id     = aws_vpc.VPC-C.id
    cidr_block = "10.30.1.0/24"
    availability_zone = "us-east-1a"
  tags   = {
    Name = "subnet-pb_VPC-C-1a"
  }
}

resource "aws_subnet" "subnet-pv_VPC-C-1a" {
    vpc_id     = aws_vpc.VPC-C.id
    cidr_block = "10.30.2.0/24"
    availability_zone = "us-east-1a"
  tags   = {
    Name = "subnet-pv_VPC-C-1a"
  }
}

resource "aws_subnet" "subnet-db_VPC-C-1a" {
    vpc_id     = aws_vpc.VPC-C.id
    cidr_block = "10.30.3.0/24"
    availability_zone = "us-east-1a"
  tags   = {
    Name = "subnet-db_VPC-C-1a"
  }
}

resource "aws_subnet" "subnet-pb_VPC-C-1b" {
    vpc_id     = aws_vpc.VPC-C.id
    cidr_block = "10.30.4.0/24"
    availability_zone = "us-east-1b"
    
  tags   = {
    Name = "subnet-pb_VPC-C-1b"
  }
}

resource "aws_subnet" "subnet-pv_VPC-C-1b" {
    vpc_id     = aws_vpc.VPC-C.id
    cidr_block = "10.30.5.0/24"
    availability_zone = "us-east-1b"
  tags   = {
    Name = "subnet-pv_VPC-C-1b"
  }
}

resource "aws_subnet" "subnet-db_VPC-C-1b" {
    vpc_id     = aws_vpc.VPC-C.id
    cidr_block = "10.30.6.0/24"
    availability_zone = "us-east-1b"
  tags   = {
    Name = "subnet-db_VPC-C-1b"
  }
}

resource "aws_subnet" "subnet-pb_VPC-C-1c" {
    vpc_id     = aws_vpc.VPC-C.id
    cidr_block = "10.30.7.0/24"
    availability_zone = "us-east-1c"
  
  tags   = {
    Name = "subnet-pb_VPC-C-1c"
  }
}

resource "aws_subnet" "subnet-pv_VPC-C-1c" {
    vpc_id     = aws_vpc.VPC-C.id
    cidr_block = "10.30.8.0/24"
    availability_zone = "us-east-1c"
  
  tags   = {
    Name = "subnet-pv_VPC-C-1c"
  }
}

resource "aws_subnet" "subnet-db_VPC-C-1c" {
    vpc_id     = aws_vpc.VPC-C.id
    cidr_block = "10.30.9.0/24"
    availability_zone = "us-east-1c"
  
  tags   = {
    Name = "subnet-db_VPC-C-1c"
  }
}

#######################
## Route Table PV/DB ##
#######################

// VPCA

resource "aws_route_table" "rt-subnet-pv-vpc-a" {
  vpc_id = aws_vpc.VPC-A.id

  # route {
  #   cidr_block = "0.0.0.0/0"
  #   gateway_id = aws_nat_gateway.nat-a.id
  # }

  tags = {
    Name = "rt-subnet-pv-vpc-a"
  }
}

resource "aws_route_table_association" "vpca-pv-az1" {
  subnet_id = aws_subnet.subnet-pv_VPC-A-1a.id
  route_table_id = aws_route_table.rt-subnet-pv-vpc-a.id
}

resource "aws_route_table_association" "vpca-pv-az2" {
  subnet_id = aws_subnet.subnet-pv_VPC-A-1b.id
  route_table_id = aws_route_table.rt-subnet-pv-vpc-a.id
}

resource "aws_route_table_association" "vpca-pv-az3" {
  subnet_id = aws_subnet.subnet-pv_VPC-A-1c.id
  route_table_id = aws_route_table.rt-subnet-pv-vpc-a.id
}

resource "aws_route_table_association" "vpca-db-az1" {
  subnet_id = aws_subnet.subnet-db_VPC-A-1a.id
  route_table_id = aws_route_table.rt-subnet-pv-vpc-a.id
}

resource "aws_route_table_association" "vpca-db-az2" {
  subnet_id = aws_subnet.subnet-db_VPC-A-1b.id
  route_table_id = aws_route_table.rt-subnet-pv-vpc-a.id
}

resource "aws_route_table_association" "vpca-db-az3" {
  subnet_id = aws_subnet.subnet-db_VPC-A-1c.id
  route_table_id = aws_route_table.rt-subnet-pv-vpc-a.id
}

// VPCB

resource "aws_route_table" "rt-subnet-pv-vpc-b" {
  vpc_id = aws_vpc.VPC-B.id
  

  # route {
  #   cidr_block = "0.0.0.0/0"
  #   gateway_id = aws_nat_gateway.nat-b.id
  # }

  tags = {
    Name = "rt-subnet-pv-vpc-b"
  }
}

resource "aws_route_table_association" "vpcb-pv-az1" {
  subnet_id = aws_subnet.subnet-pv_VPC-B-1a.id
  route_table_id = aws_route_table.rt-subnet-pv-vpc-b.id
}

resource "aws_route_table_association" "vpcb-pv-az2" {
  subnet_id = aws_subnet.subnet-pv_VPC-B-1b.id
  route_table_id = aws_route_table.rt-subnet-pv-vpc-b.id
}

resource "aws_route_table_association" "vpcb-pv-az3" {
  subnet_id = aws_subnet.subnet-pv_VPC-B-1c.id
  route_table_id = aws_route_table.rt-subnet-pv-vpc-b.id
}

resource "aws_route_table_association" "vpcb-db-az1" {
  subnet_id = aws_subnet.subnet-db_VPC-B-1a.id
  route_table_id = aws_route_table.rt-subnet-pv-vpc-b.id
}

resource "aws_route_table_association" "vpcb-db-az2" {
  subnet_id = aws_subnet.subnet-db_VPC-B-1b.id
  route_table_id = aws_route_table.rt-subnet-pv-vpc-b.id
}

resource "aws_route_table_association" "vpcb-db-az3" {
  subnet_id = aws_subnet.subnet-db_VPC-B-1c.id
  route_table_id = aws_route_table.rt-subnet-pv-vpc-b.id
}

// VPCC

resource "aws_route_table" "rt-subnet-pv-vpc-c" {
  vpc_id = aws_vpc.VPC-C.id
  

  # route {
  #   cidr_block = "0.0.0.0/0"
  #   gateway_id = aws_nat_gateway.nat-c.id
  # }

  tags = {
    Name = "rt-subnet-pv-vpc-c"
  }
}

resource "aws_route_table_association" "vpcc-pv-az1" {
  subnet_id = aws_subnet.subnet-pv_VPC-C-1a.id
  route_table_id = aws_route_table.rt-subnet-pv-vpc-c.id
}

resource "aws_route_table_association" "vpcc-pv-az2" {
  subnet_id = aws_subnet.subnet-pv_VPC-C-1b.id
  route_table_id = aws_route_table.rt-subnet-pv-vpc-c.id
}

resource "aws_route_table_association" "vpcc-pv-az3" {
  subnet_id = aws_subnet.subnet-pv_VPC-C-1c.id
  route_table_id = aws_route_table.rt-subnet-pv-vpc-c.id
}

resource "aws_route_table_association" "vpcc-db-az1" {
  subnet_id = aws_subnet.subnet-db_VPC-C-1a.id
  route_table_id = aws_route_table.rt-subnet-pv-vpc-c.id
}

resource "aws_route_table_association" "vpcc-db-az2" {
  subnet_id = aws_subnet.subnet-db_VPC-C-1b.id
  route_table_id = aws_route_table.rt-subnet-pv-vpc-c.id
}

resource "aws_route_table_association" "vpcc-db-az3" {
  subnet_id = aws_subnet.subnet-db_VPC-C-1c.id
  route_table_id = aws_route_table.rt-subnet-pv-vpc-c.id
}

###########
### IGW ###
###########

resource "aws_internet_gateway" "igw-vpc-a" {
  vpc_id = aws_vpc.VPC-A.id

  tags = {
    Name = "igw-vpc-a"
  }
}

resource "aws_internet_gateway" "igw-vpc-b" {
  vpc_id = aws_vpc.VPC-B.id

  tags = {
    Name = "igw-vpc-b"
  }
}

resource "aws_internet_gateway" "igw-vpc-c" {
  vpc_id = aws_vpc.VPC-C.id

  tags = {
    Name = "igw-vpc-c"
  }
}


########################
## Route Table Public ##
########################

// VPCA

resource "aws_route_table" "rt-subnet-pb-vpc-a" {
  vpc_id = aws_vpc.VPC-A.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw-vpc-a.id
  }

  tags = {
    Name = "rt-subnet-pb-vpc-a"
  }
}

resource "aws_route_table_association" "vpca-az1" {
  subnet_id = aws_subnet.subnet-pb_VPC-A-1a.id
  route_table_id = aws_route_table.rt-subnet-pb-vpc-a.id
}

resource "aws_route_table_association" "vpca-az2" {
  subnet_id = aws_subnet.subnet-pb_VPC-A-1b.id
  route_table_id = aws_route_table.rt-subnet-pb-vpc-a.id
}

resource "aws_route_table_association" "vpca-az3" {
  subnet_id = aws_subnet.subnet-pb_VPC-A-1c.id
  route_table_id = aws_route_table.rt-subnet-pb-vpc-a.id
}

//VPCB

resource "aws_route_table" "rt-subnet-pb-vpc-b" {
  vpc_id = aws_vpc.VPC-B.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw-vpc-b.id
  }

  tags = {
    Name = "rt-subnet-pb-vpc-b"
  }
}

resource "aws_route_table_association" "vpcb-az1" {
  subnet_id = aws_subnet.subnet-pb_VPC-B-1a.id
  route_table_id = aws_route_table.rt-subnet-pb-vpc-b.id
}

resource "aws_route_table_association" "vpcb-az2" {
  subnet_id = aws_subnet.subnet-pb_VPC-B-1b.id
  route_table_id = aws_route_table.rt-subnet-pb-vpc-b.id
}

resource "aws_route_table_association" "vpcb-az3" {
  subnet_id = aws_subnet.subnet-pb_VPC-B-1c.id
  route_table_id = aws_route_table.rt-subnet-pb-vpc-b.id
}

// VPCC

resource "aws_route_table" "rt-subnet-pb-vpc-c" {
  vpc_id = aws_vpc.VPC-C.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw-vpc-c.id
  }

  tags = {
    Name = "rt-subnet-pb-vpc-c"
  }
}

resource "aws_route_table_association" "vpcc-az1" {
  subnet_id = aws_subnet.subnet-pb_VPC-C-1a.id
  route_table_id = aws_route_table.rt-subnet-pb-vpc-c.id
}

resource "aws_route_table_association" "vpcc-az2" {
  subnet_id = aws_subnet.subnet-pb_VPC-C-1b.id
  route_table_id = aws_route_table.rt-subnet-pb-vpc-c.id
}

resource "aws_route_table_association" "vpcc-az3" {
  subnet_id = aws_subnet.subnet-pb_VPC-C-1c.id
  route_table_id = aws_route_table.rt-subnet-pb-vpc-c.id
}
